[tool.poetry]
name = "incolumepy.prospect.lumache"
version = "0.4.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages=[
    {include = 'incolumepy/prospect/lumache', from=''},
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
Sphinx = "^4.3.2"
toml = {extras = ["tomli"], version = "^0.10.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
